<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/nowPlayingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/PlaylistInfo"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/playlist1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/playlist2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/playlist3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:gravity="center_vertical"
                android:text="@string/playlist4" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>